# migu

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: cli.rs  config.rs  db.rs  main.rs  shell.rs  tui.rs
